2003-08-12  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/dirkey.c, modules/syscalls/calls.c:
	* modules/regexp/regexi.c (misc_encoding, pathname_encoding):
	use GLO to pick the user changes to *MISC-ENCODING*
	and *PATHNAME-ENCODING* at run time
	* genclisph.d (object_tab): enabled

2003-08-12  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-write-lib): do not write constants; unwrap PROGN
	* init.lisp (LAMBDA-LIST-TO-SIGNATURE) [!COMPILER]: dummy definition
	(defun): call LAMBDA-LIST-TO-SIGNATURE at macroexpand time
	(%expand-macro): new function
	(%expand-form): use it

2003-08-11  Sam Steingold  <sds@gnu.org>

	* wrap.lisp (*license*): new variable
	(start-netica): license is a keyword parameter
	(*features*): push :netica

2003-08-11  Sam Steingold  <sds@gnu.org>

	* calls.c (STREAM-LOCK): added begin_system_call()/end_system_call()

2003-08-10  Arseny Slobodjuck  <ampy@ich.dvo.ru>

	* pathname.d (nullfile): new local function.
	(LAUNCH): take NIL stream as /dev/nul.

2003-08-07  John Hinsdale <hin@alma.com>
	* oracle.lisp, fastcgi.lisp, fastcgi.h, linux.lisp
	Take "C" prototypes from standard headers, not FFI

2003-08-07  Sam Steingold  <sds@gnu.org>

	LOAD :COMPILING T: handle errors just like with COMPILE-FILE
	* init.lisp (load): bind compiler::*c-error-output*;
	when *load-compiling*, call compiler::c-reset-globals before loading
	and compiler::c-report-problems after loading
	* compiler.lisp (compile-lambda-helper): extracted from compile-lambda
	(compile-lambda, compile-form-in-toplevel-environment): call it

2003-08-07  Sam Steingold  <sds@gnu.org>

	track the current source file consistently
	* init.lisp (*current-source-file*): new variable
	(load): bind it
	(check-redefinition): use it instead of a complicated combination
	of *load-truename* & *compile-file-truename*
	* compiler.lisp (compile-file): bind it

2003-08-07  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-FREE): make the freed function invalid
